[package]
name = "rust_kv"
version = "0.1.0"
edition = "2024"

[dependencies]
# Error Handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Logging
tracing = "0.1.43"
tracing-subscriber = {version = "0.3.22", features = ["env-filter"]}

# Serialization
serde = { version = "1.0.228", features = ["derive"]}
bincode = "1.3"

# CLI
clap = {version = "4.5.53", features = ["derive"]}

tempfile = "3.2"